# ModelView3D

./: CMakeLists.txt  README.md
include/ModelView3D/: camera.h  mesh.h  model_loader.h  model_view_3D_app.h  shader.h  viewer.h
modules/entry_point/: main.cpp
modules/gui/include/: camera.h  mesh.h  model_view_3D_app.h  namespace_gui.h  objects.h  shader.h  viewer.h
modules/gui/src/: camera.cpp  mesh.cpp  model_view_3D_app.cpp  shader.cpp  viewer.cpp
modules/raw_model/include/: raw_model.h
modules/raw_model/src/: raw_model.cpp
shaders/basic/: fragment.glsl  vertex.glsl
src/: camera.cpp  main.cpp  mesh.cpp  model_loader.cpp  model_view_3D_app.cpp  shader.cpp  viewer.cpp
vcpkg/: vcpkg.cmake  vcpkg.json
